<resources>
    <string name="app_name">Soundroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="home_second">Home Second</string>
    <string name="mes_pistes">Toutes mes pistes</string>
    <string name="playlists">Listes de lecture</string>
    <string name="partage">Partage</string>
    <string name="exporter">Exporter</string>
    <string name="param_tres">Paramètres</string>
    <string name="authors">Mélissa DA COSTA - Jonathan CRÉTÉ - Christelle NGUYEN</string>
    <string name="rechercher">Rechercher</string>
    <string name="pochette_piste">Pochette piste</string>
    <string name="artiste">Artiste</string>
    <string name="titre">Titre</string>
    <string name="contr_le_pour_passer_musique_suivante">Contrôle pour passer musique suivante</string>
    <string name="contr_le_pour_jouer_une_piste">Contrôle pour jouer une piste</string>
    <string name="contr_le_pour_passer_a_la_piste_pr_c_dente">Contrôle pour passer a la piste précédente</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="duration">Duration</string>
    <string name="star_for_note_of_track">star for note of track</string>
    <string name="represents_a_button_to_launch_random_playback">represents a button to launch random playback</string>
    <string name="represents_a_button_to_add_a_tag">represents a button to add a tag</string>
    <string name="represents_a_button_to_return_previous_activity">represents a button to return previous activity</string>
    <string name="_0_00">0:00</string>
    <string name="number_of_songs">Number of songs</string>
    <string name="historique">Historique</string>
    <string name="chansons">Chansons</string>
    <string name="_0">0</string>
    <string name="favoris">Favoris</string>
    <string name="button_to_go_to_favoris_fragment">button to go to favoris fragment</string>
    <string name="butto_n_to_go_to_history_fragment">butto,n to go to history fragment</string>
    <string name="button_to_go_to_playlists_fragment">button to go to playlists fragment</string>
    <string name="lecture_al_atoire">Lecture aléatoire</string>
    <string name="button_to_select_filter_for_listview">button to select filter for listView</string>
    <string name="dur_e">Durée</string>
    <string name="temps">Temps</string>
    <string name="plus_courtes">Plus courtes</string>
    <string name="plus_longues">Plus Longues</string>
    <string name="automatique">Automatique</string>
    <string name="personnalis_es">Personnalisées</string>
    <string name="ic_ne_repr_sentant_l_acc_s_au_playlist_de_morceaux_favoris">icône représentant l\'accés au playlist de morceaux favoris</string>
    <string name="icone_repr_sentant_l_acc_s_la_playlist_de_morceaux_les_plus_cout_s">Icone représentant l\'accés à la playlist de morceaux les plus écoutés</string>
    <string name="les_cout_s">Les plus écoutés</string>
    <string name="avec_tag">Avec tag</string>
    <string name="_0_chansons">0 chansons</string>
    <string name="bouton_pour_ajouter_une_playlist">Bouton pour ajouter une playlist</string>
    <string name="ajouter_une_playlist">Ajouter une playlist</string>
    <string name="nom_de_la_liste_de_lecture">Nom de la liste de lecture</string>
    <string name="mon_tag">mon tag</string>
    <string name="index">1</string>
    <string name="exporter_la_base_de_donn_es">Exporter Metadonnées</string>
    <string name="si_vous_le_souhaitez_vous_pouvez_sauvegarder_votre_base_de_donn_es_musicale">Si vous le souhaitez, vous pouvez sauvegarder les métadonnées de vos musiques préférées dans un fichier json :</string>
    <string name="btn_volume_control">Bouton de contrôle du volume</string>
    <string name="most_played">Les plus écoutées</string>
    <string name="favorites">Favoris</string>
    <string name="tag">Avec tag</string>
    <string name ="nb_lectures">%1$s lectures</string>
    <string name="mise_en_pause_automatique_du_lecteur">Mise en pause automatique du lecteur</string>
    <string name="si_le_t_l_phone_est_notifi_de_l_arriv_e_d_un_sms_mettre_en_pause_la_lecture_pour_le_lire_vocalement">Si le téléphone est notifié de l\'arrivée d\'un SMS, mettre en pause la lecture pour le lire vocalement</string>
    <string name="lecture_vocale_des_sms_entrants">Lecture vocale des SMS entrants</string>
    <string name="si_la_batterie_du_t_l_phone_est_dessous_de_10_mettre_en_pause_la_lecture_pour_conomiser_la_batterie">Si la batterie du téléphone est dessous de 10%, mettre en pause la lecture pour économiser la batterie</string>
</resources>
