<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_all_tracks"
            android:icon="@drawable/ic_menu_tracks"
            android:title="@string/mes_pistes" />
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_menu_playlists"
            android:title="@string/playlists" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_history"
            android:title="@string/historique" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/partage" />
        <item
            android:id="@+id/nav_export"
            android:icon="@drawable/ic_menu_export"
            android:title="@string/exporter" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_settings"
            android:title="@string/param_tres" />
    </group>
</menu>
