<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AllTracksFragment">

    <LinearLayout
        android:id="@+id/lin_layout_all_tracks_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_layout_all_tracks_options"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:padding="10dp">

            <ImageView
                android:id="@+id/iv_list_go_favoris"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_to_go_to_favoris_fragment"
                android:src="@drawable/ic_rounded_star_black"
                android:tint="@color/colorPrimaryFlash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.325"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <ImageView
                android:id="@+id/iv_list_go_playlists"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_to_go_to_playlists_fragment"
                android:src="@drawable/ic_menu_playlists"
                android:tint="@color/colorPrimaryFlash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.594"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/tv_list_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/historique"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.046"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

            <ImageView
                android:id="@+id/iv_list_go_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/butto_n_to_go_to_history_fragment"
                android:src="@drawable/ic_menu_history"
                android:tint="@color/colorPrimaryFlash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.072"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.25" />

            <TextView
                android:id="@+id/tv_list_number_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/colorPrimaryFlash"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.857"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.186" />

            <TextView
                android:id="@+id/tv_list_label_number_songs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chansons"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.896"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

            <TextView
                android:id="@+id/tv_list_history4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favoris"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.315"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

            <TextView
                android:id="@+id/tv_list_history5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlists"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.597"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/con_layout_all_tracks_filter_rand_playback"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="10dp">

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/lecture_al_atoire"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.986"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/button_to_select_filter_for_listview"
                android:src="@drawable/ic_filter_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.013"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/con_layout_all_tracks_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/list_songs"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp" />
        </LinearLayout>

    </LinearLayout>





</FrameLayout>