<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical">

    <View
        android:background="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_player"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_color_2"
        android:clickable="false"
        android:focusable="false"
        android:minHeight="50dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/crt_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/iv_toolbar_artwork"
                android:layout_width="71dp"
                android:layout_height="69dp"
                android:contentDescription="@string/pochette_piste"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/artwork_default" />

            <TextView
                android:id="@+id/tv_toolbar_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="25"
                android:text="@string/artiste"
                android:textColor="@color/design_default_color_on_secondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_control_skip_previous"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/tv_toolbar_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.7" />

            <TextView
                android:id="@+id/tv_toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:marqueeRepeatLimit="marquee_forever"
                android:maxLength="25"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/titre"
                android:textColor="@color/design_default_color_on_secondary"

                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/iv_control_skip_previous"
                app:layout_constraintHorizontal_bias="0.078"
                app:layout_constraintStart_toEndOf="@+id/iv_toolbar_artwork"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.32" />

            <ImageView
                android:id="@+id/iv_control_play"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contr_le_pour_jouer_une_piste"
                android:tint="@color/colorPrimaryFlash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.771"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484"
                app:srcCompat="@drawable/ic_play_white" />

            <ImageView
                android:id="@+id/iv_control_skip_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contr_le_pour_passer_musique_suivante"
                android:tint="@color/colorPrimaryFlash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.91"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.454"
                app:srcCompat="@drawable/ic_next_white" />

            <ImageView
                android:id="@+id/iv_control_skip_previous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/contr_le_pour_passer_a_la_piste_pr_c_dente"
                android:tint="@color/colorPrimaryFlash"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.637"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484"
                app:srcCompat="@drawable/ic_previous_white" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.appcompat.widget.Toolbar>

</LinearLayout>


