<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PlayerFragment"
    >


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/side_nav_bar">

        <TextView
            android:id="@+id/tv__list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titre"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.135" />

        <TextView
            android:id="@+id/tv_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artiste"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.201" />

        <ImageView
            android:id="@+id/iv_artwork"
            android:layout_width="253dp"
            android:layout_height="248dp"
            android:contentDescription="@string/pochette_piste"
            android:src="@drawable/artwork_default"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.453" />

        <SeekBar
            android:id="@+id/seekBar_player"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="381dp"
            android:layout_height="37dp"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_artwork"
            app:layout_constraintVertical_bias="0.223" />

        <ImageView
            android:id="@+id/iv_control_player_play"
            android:layout_width="77dp"
            android:layout_height="64dp"
            android:contentDescription="@string/contr_le_pour_passer_a_la_piste_pr_c_dente"
            android:src="@drawable/ic_play_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_player"
            app:layout_constraintVertical_bias="0.381" />

        <ImageView
            android:id="@+id/iv_control_player_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="58dp"
            android:contentDescription="@string/contr_le_pour_passer_a_la_piste_pr_c_dente"
            android:src="@drawable/ic_previous_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/iv_control_player_play"
            app:layout_constraintHorizontal_bias="0.816"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_player"
            app:layout_constraintVertical_bias="0.0" />

        <ImageView
            android:id="@+id/iv_control_player_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/contr_le_pour_passer_musique_suivante"
            android:src="@drawable/ic_next_white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.251"
            app:layout_constraintStart_toEndOf="@+id/iv_control_player_play"
            app:layout_constraintTop_toBottomOf="@+id/seekBar_player"
            app:layout_constraintVertical_bias="0.414" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>